<resources>
    <string name="app_name">プロフィール</string>
    <string name="main_title">ようこそ！！プロフィール登録へ！</string>
    <string name="main_sub">使ってみよう！</string>
    <string name="profile_button_name">表示</string>
    <string name="new_button_name">新規登録</string>

    <string name="name">氏名</string>
    <string name="age">年齢</string>
    <string name="sex">性別</string>
    <string name="address">居住地</string>
    <string name="roots">出身地</string>
    <string name="finaleducation">最終学歴</string>
    <string name="company">所属会社</string>
    <string name="formerjob1">職歴1</string>
    <string name="formerjob2">職歴2</string>
</resources>
